--- a/src/main/resources/config.yaml
+++ b/src/main/resources/config.yaml
@@ -1,16 +1,21 @@
 # 带[ ]括号的，就是多选，不带的就是单选
 boss:
-  sayHi: "您好,我有7年工作经验,还有AIGC大模型、Java,Python,Golang和运维的相关经验,希望应聘这个岗位,期待可以与您进一步沟通,谢谢！" #必须要关闭boss的自动打招呼
-  keywords: [ "大模型工程师", "AI工程师", "Python", "Golang", "Java" ] # 需要搜索的职位,会依次投递
+  sayHi: "Java全栈,云原生Kafka一年经验24届。计算机基础扎实,项目经验丰富,精通Java,熟悉Java并发,JVM原理。熟悉 MySQL、Redis、Kafka、RocketMQ的原理和实践，热爱研究框架源码如MyBatis、Spring、SpringMVC, JDK常用类。熟悉Golang了解Rust,熟悉Docker及原理。" #必须要关闭boss的自动打招呼
+  keywords: ["Java", "后端", "Golang"] # 需要搜索的职位,会依次投递
   industry: [ "不限" ] # 公司行业，只能选三个，相关代码枚举的部分，如果需要其他的需要自己找
-  cityCode: [ "上海" ] # 只列举了部分,如果没有的需要自己找：目前支持的：全国 北京 上海 广州 深圳 成都
-  experience: [ "不限" ] # 工作经验："应届毕业生", "1年以下", "1-3年", "3-5年", "5-10年", "10年以上"
-  jobType: "不限" #求职类型："全职", "兼职"
+  cityCode: [ "杭州", "上海", "北京", "广州", "深圳", "成都"] # 只列举了部分,如果没有的需要自己找：目前支持的：全国 北京 上海 广州 深圳 成都
+  experience: [ "1年以下", "1-3年", "应届毕业生" ] # 工作经验："应届毕业生", "1年以下", "1-3年", "3-5年", "5-10年", "10年以上"
+  jobType: "全职" #求职类型：, "兼职"
+  salaryLeftMin: 15 # 最低薪资
+  salaryRightMax: 30 # 最高薪资
+  graduateYear: 2024 # 毕业年份
   salary: "不限" # 薪资（单选）："3K以下", "3-5K", "5-10K", "10-20K", "20-50K", "50K以上"
   degree: [ "不限" ] # 学历: "初中及以下", "中专/中技", "高中", "大专", "本科", "硕士", "博士"
-  scale: [ "不限" ] # 公司规模："0-20人", "20-99人", "100-499人", "500-999人", "1000-9999人", "10000人以上"
+  scale: [ "100-499人", "500-999人", "1000-9999人", "10000人以上" ] # 公司规模："0-20人", "20-99人", "100-499人", "500-999人", "1000-9999人", "10000人以上"
   stage: [ "不限" ] # "未融资", "天使轮", "A轮", "B轮", "C轮", "D轮及以上", "已上市", "不需要融资"
-  enableAI: true #开启AI检测与自动生成打招呼语
+  enableAI: false #开启AI检测与自动生成打招呼语
+  workYears: 1
+
 
 job51:
   jobArea: [ "上海" ]  #工作地区：目前只有【北京 成都 上海 广州 深圳】
@@ -36,7 +41,5 @@ zhilian:
 
 ai:
   introduce: "我熟练使用Spring Boot、Spring Cloud、Alibaba Cloud及其生态体系，擅长MySQL、Oracle、PostgreSQL等关系型数据库以及MongoDB、Redis等非关系型数据库。熟悉Docker、Kubernetes等容器化技术，掌握WebSocket、Netty等通信协议，拥有即时通讯系统的开发经验。熟练使用MyBatis-Plus、Spring Data、Django ORM等ORM框架，熟练使用Python、Golang开发，具备机器学习、深度学习及大语言模型的开发与部署经验。此外，我熟悉前端开发，涉及Vue、React、Nginx配置及PHP框架应用" #这是喂给AI的提示词，主要介绍自己的优势
-  prompt: "我目前在找工作,%s,我期望的的岗位方向是【%s】,目前我需要投递的岗位名称是【%s】,这个岗位的要求是【%s】,如果这个岗位和我的期望与经历基本符合，注意是基本符合，那么请帮我写一个给HR打招呼的文本发给我，如果这个岗位和我的期望经历完全不相干，直接返回false给我，注意只要返回我需要的内容即可，不要有其他的语气助词，重点要突出我和岗位的匹配度以及我的优势，我自己写的招呼语是：【%s】,你可以参照我自己写的根据岗位情况进行适当调整" #这是AI的提示词，可以自行修改
-
 bot:
   is_send: true #开启企业微信消息推送
