--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,9 +2,10 @@ spring:
   application:
     name: Job-executor
 delivery:
-  keywords: [ "Java后端", "Java全栈", "Golang后端", "Java云原生", "golang云原生" ] # 需要搜索的职位,会依次投递
+  execute: true # 是否执行投递
+  keywords: [ "大数据", "kafka", "中间件开发", "Java后端", "Java全栈", "Java云原生", "运维开发", "SRE", "Golang后端", "golang云原生" ] # 需要搜索的职位,会依次投递
   industries: [ "不限" ] # 公司行业，只能选三个，相关代码枚举的部分，如果需要其他的需要自己找
-  cities: [ "杭州", "上海", "北京", "广州", "深圳", "成都" ] # 只列举了部分,如果没有的需要自己找：目前支持的：全国 北京 上海 广州 深圳 成都
+  cities: [ "杭州", "上海", "广州", "深圳", "北京", "成都" ] # 只列举了部分,如果没有的需要自己找：目前支持的：全国 北京 上海 广州 深圳 成都
   experience: [ "一年以内", "1-3年", "应届生" ] # 工作经验："应届毕业生", "1年以下", "1-3年", "3-5年", "5-10年", "10年以上"
   jobType: "全职" #求职类型：, "兼职"
   salaryLeftMin: 15 # 最低薪资
@@ -25,7 +26,6 @@ delivery:
     - "易宝"
     - "华为"
     - "德科"
-    - "阿里"
     - "法本"
     - "华盛"
     - "恒辉"
@@ -53,7 +53,7 @@ delivery:
     - "驻场"
     - "派遣"
     - "OD"
-  introduction: Java全栈,云原生Kafka一年经验24届。计算机基础扎实,项目经验丰富,精通Java,熟悉Java并发,JVM原理。熟悉 MySQL、Redis、Kafka、RocketMQ的原理和实践，热爱研究框架源码如MyBatis、Spring、SpringMVC,JDK常用类。熟悉Golang了解Rust,熟悉Docker及原理。
+  introduction: Java全栈,RocketMQ团队开始云原生Kafka一年经验24届。计算机基础扎实,项目经验丰富,精通Java,Java并发,JVM原理。精通 MySQL、Redis、Kafka、RocketMQ的原理和实践，热爱研究框架源码如MyBatis、Spring、SpringMVC,JDK常用类。熟悉Golang了解Rust,熟悉Docker及原理。在公司完成RocketMQ Copilot项目以及AutoMQ SAAS控制面项目。能快速的学习新技术，高效完成工作。有良好的团队合作精神，能够承受较大的工作压力。希望能加入一个技术氛围浓厚的团队，共同成长。
 
 platform: boss
 
@@ -65,4 +65,7 @@ ai:
   ai-enabled: true
   base-url: https://aigptx.top
   api-key: sk-EicDBKN60af0520b4349T3BlBkFJBe4513Fcd60F4f378D1a
-  model: gpt-3.5-turbo
+  ai-model: gpt-4o-mini
+
+server:
+  port: 80
