-把多线程关闭，在立即沟通处增加了时延，更改了一下适合自己系统的驱动，修改了配置文件已适应自身的招聘需求

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,14 +3,14 @@ spring:
     name: Job-executor
 delivery:
   execute: true # 是否执行投递
-  keywords: [ "大数据", "kafka", "中间件开发", "Java后端", "Java全栈", "Java云原生", "运维开发", "SRE", "Golang后端", "golang云原生" ] # 需要搜索的职位,会依次投递
+  keywords: [ "Java后端", "Java全栈", "Java云原生", "运维开发"] # 需要搜索的职位,会依次投递
   industries: [ "不限" ] # 公司行业，只能选三个，相关代码枚举的部分，如果需要其他的需要自己找
-  cities: [ "杭州", "上海", "广州", "深圳", "北京", "成都" ] # 只列举了部分,如果没有的需要自己找：目前支持的：全国 北京 上海 广州 深圳 成都
+  cities: [ "深圳","上海", "南京", "杭州", "苏州", "广州", "厦门", "北京" ] # 只列举了部分,如果没有的需要自己找：目前支持的：全国 北京 上海 广州 深圳 成都
   experience: [ "一年以内", "1-3年", "应届生" ] # 工作经验："应届毕业生", "1年以下", "1-3年", "3-5年", "5-10年", "10年以上"
   jobType: "全职" #求职类型：, "兼职"
-  salaryLeftMin: 15 # 最低薪资
+  salaryLeftMin: 13 # 最低薪资
   salaryRightMax: 30 # 最高薪资
-  graduateYear: 2024 # 毕业年份
+  graduateYear: 2025 # 毕业年份
   salary: [ "10-20K", "20-50K" ] # 薪资（单选）："3K以下", "3-5K", "5-10K", "10-20K", "20-50K", "50K以上"
   degree: [ "不限" ] # 学历: "初中及以下", "中专/中技", "高中", "大专", "本科", "硕士", "博士"
   scale: [ "100-499人", "500-999人", "1000-9999人", "10000人以上" ] # 公司规模："0-20人", "20-99人", "100-499人", "500-999人", "1000-9999人", "10000人以上"
@@ -53,18 +53,18 @@ delivery:
     - "驻场"
     - "派遣"
     - "OD"
-  introduction: Java全栈,RocketMQ团队开始云原生Kafka一年经验24届。计算机基础扎实,项目经验丰富,精通Java,Java并发,JVM原理。精通 MySQL、Redis、Kafka、RocketMQ的原理和实践，热爱研究框架源码如MyBatis、Spring、SpringMVC,JDK常用类。熟悉Golang了解Rust,熟悉Docker及原理。在公司完成RocketMQ Copilot项目以及AutoMQ SAAS控制面项目。能快速的学习新技术，高效完成工作。有良好的团队合作精神，能够承受较大的工作压力。希望能加入一个技术氛围浓厚的团队，共同成长。
+  introduction: 有丰富的Java后端开发经验，独立开发过异步任务调度框架和在线编程题目判题平台。25应届生。两次获得校奖学金、通过CET-6、投稿多篇会议论文。在基础能力方面，熟悉计算机网络、操作系统、数据结构和算法、MySQL、Redis原理，并在项目中都有应用过。不管是理论基础能力，还是实践能力，我的能力能满足贵公司岗位的要求，希望能与贵公司能进一步的交流，我可以先发一份我的简历给贵公司看看吗?
 
 platform: boss
 
 bot:
   enable: true #开启企业微信消息推送
-  hook-url: https://open.feishu.cn/open-apis/bot/v2/hook/387f73e5-5dea-45fe-abff-ec65f39fbf35
+  hook-url: https://open.feishu.cn/open-apis/bot/v2/hook/eafdf3f0-e521-4271-93de-fd9b1d6a9534
 
 ai:
   ai-enabled: true
   base-url: https://aigptx.top
-  api-key: sk-EicDBKN60af0520b4349T3BlBkFJBe4513Fcd60F4f378D1a
+  api-key: sk-1pYf1iYG85872cEFb347T3BLbkFJ6a25E45d0E7745758Cd1
   ai-model: gpt-4o-mini
 
 server:
